# bp2022-ap1

./: .env.dev  .env.gui  .env.secret.sample  .env.shared  .env.test  .gitignore  .test_durations  README.md  docker-compose-cache.json  docker-compose.dev-without-celery.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  docker-compose.yml  make_celery.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  non-functional-requirement.md
.github/workflows/: .pylintrcsrc  .pylintrctests  deploy-docs.yml  python-app.yml
.postman/: api  api_b23db1c0-fe6b-4c8f-887a-2c9ca66ebf20
bp2022_ap1/: component.py
bp2022_ap1/schedule/: train_schedule.py
bp2022_ap1/spawner/: train_spawner.py
bp2022_ap1/wrapper/: communicator.py
compose/celery/: Dockerfile
compose/flask/: Dockerfile
compose/sumo-flask/: Dockerfile
compose/waitress/: Dockerfile
data/: combined_helper.py  example_helper.py  planpro_helper.py  sumo_config_helper.py
data/planpro/: complex-example.ppxml  example.ppxml  test_example.ppxml
data/sumo/: example.edg.xml
data/sumo-config/: example.net.xml  example.scenario.sumocfg
db/local/: db.py  docker-compose.yml
doc/coal_consumption/: coal_consumption.ipynb
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst
grafana/local/: dashboard_config_based.json  dashboard_multi_config_based.json  dashboard_run_based.json  datasource.json  datasource_local.json
postman/collections/: rest-api-autogenerate.json
postman/schemas/: index.yaml
postman/schemas/paths/: run-by-id.yaml  (+5 more)
research/coal_consumption/: coal_consumption.ipynb  power_stations_raw.csv  smard_api.py
scripts/: insert_demonstration_simulation.py  insert_demonstration_simulation_data.py  insert_demonstration_simulation_data_fault.py  insert_demonstration_simulation_video.py  insert_fault_injection_examples.py  insert_simple_simulation.py  insert_slightly_complicated_simulation.py  insert_stops.py
src/: __init__.py  base_model.py  component.py  config.py  constants.py  interfaces.py
src/api/: component.py  decorators.py  run.py  schedule.py  schemas.py  simulation.py  token.py
src/communicator/: celery.py  communicator.py
src/data_science/: data_science.py  grafana_data_registration.py
src/event_bus/: event.py  event_bus.py
src/faultInjector/: faultInjector.py
src/fault_injector/: fault_injector.py  fault_json_schema.json  fault_strategies.py
src/implementor/: __init__.py  component.py  models.py  permission.py  run.py  schedule.py  simulation.py  token.py
src/interlocking_component/: infrastructure_provider.py  interlocking_configuration.py  route_controller.py  router.py
src/logger/: log_collector.py  log_entry.py  logger.py
src/schedule/: demand_schedule_strategy.py  random_schedule_strategy.py  regular_schedule_strategy.py  schedule.py  schedule_configuration.py  schedule_strategy.py  smard_api.py  train_schedule.py
src/schemas/: model.py
src/spawner/: spawner.py  train_spawner.py
src/wrapper/: comminucator.py  communicator.py  simulation_component.py  simulation_object.py  simulation_object_updating_component.py  simulation_objects.py  train.py  train_builder.py  train_spawner.py
sumo-config/: example.add.xml  example.con.xml  example.net.xml  example.nod.xml  example.scenario.sumocfg
tests/: conftest.py  constants.py  decorators.py  test_communicator.py  test_config.py  test_constants.py  test_fault_injector.py  test_interlocking.py  test_sample.py  test_table_basic.py
tests/api/: conftest.py  test_api.py  test_api_demand_schedule.py  test_api_interlocking.py  test_api_platform_blocked_fault.py  test_api_random_schedule.py  test_api_regular_schedule.py  test_api_run.py  test_api_schedule.py  test_api_schedule_blocked_fault.py  test_api_simulation.py  test_api_spawner.py  test_api_token.py  test_api_track_blocked_fault.py  test_api_track_speed_limit_fault.py  test_api_train_prio_fault.py  test_api_train_prio_limit.py  test_api_train_speed_fault.py  test_decorator.py  utils.py
tests/communicator/: test_communicator.py
tests/data_science/: test_data_science.py  test_grafana_data_registration.py
tests/db/: test_db.py  test_tables.py
tests/event_bus/: test_event_bus.py
tests/fault_injector/: conftest.py  test_affected_element_does_not_exist.py  test_fault.py  test_fault_configs.py  test_fault_injector.py  test_fault_strategies.py  test_platform_blocked_fault.py  test_schedule_blocked_fault.py  test_table_fault_configurations.py  test_track_blocked_fault.py  test_track_speed_limit_fault.py  test_train_prio_fault.py  test_train_speed_fault.py
tests/fixtures/: fixtures_logger.py  fixtures_model.py  fixtures_spawner.py  fixtures_wrapper.py
tests/implementor/: conftest.py  test_impl_platform_blocked_fault.py  test_impl_run.py  test_impl_schedule.py  test_impl_schedule_blocked_fault.py  test_impl_simulation.py  test_impl_spawner.py  test_impl_track_blocked_fault.py  test_impl_track_speed_limit_fault.py  test_impl_train_prio_fault.py  test_impl_train_speed_fault.py  test_implementor_models.py  test_run.py  test_table_run.py  test_table_simulation_configuration.py  test_table_token.py
tests/interlocking_component/: conftest.py  test_infrastructure_provider.py  test_interlocking.py  test_interlocking_configuration.py  test_route_controller.py  test_router.py
tests/logger/: conftest.py  test_log_collector.py  test_log_entry.py  test_logger.py
tests/schedule/: test_random_schedule_strategy.py  test_regular_schedule_strategy.py  test_schedule_configuration.py  test_train_schedule.py
tests/spawner/: conftest.py  test_demand_schedule_strategy.py  test_random_schedule_strategy.py  test_regular_schedule_strategy.py  test_schedule_configuration.py  test_smard_api.py  test_spawner.py  test_train_schedule.py
tests/tests_interlocking/: test_interlocking.py  test_interlocking_configuration.py
tests/wrapper/: conftest.py  test_communicator.py  test_simulation_object_updating_component.py  test_simulation_objects.py  test_train_spawner.py
(+557 files in other folders)
