[tool.poetry]
name = "bp2022-ap1"
version = "0.1.0"
description = ""
authors = [
    "Antony Kamp <antony.kamp@student.hpi.de>",
    "Max Lietze <max.lietze@student.hpi.de>",
    "Luke Ortlam <luke.ortlam@student.hpi.de>",
    "Anton Persitzky <anton.persitzky@student.hpi.de>",
    "Christian Raue <christian.raue@student.hpi.de>",
    "Lucas Reisener <lucas.reisener@student.hpi.de>"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
traci = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.0"
traci = "^1.16.0"
peewee = "^3.16.0"
peewee-migrate = "^1.6.6"
marshmallow = "^3.19.0"
psycopg2 = "^2.9.5"
python-dotenv = "^1.0.0"
poethepoet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]

    [tool.poe.tasks.format-isort]
    help = "Run isort on the code base"
    cmd  = "isort ."

    [tool.poe.tasks.format-black]
    help = "Run black on the code base"
    cmd  = "black ."

    [tool.poe.tasks.format]
    help = "Run formating tools on the code base"
    sequence  = ["format-isort", "format-black"]

    [tool.poe.tasks.lint-src]
    help = "Run lint in /src directory"
    cmd  = "pylint src --rcfile ./.github/workflows/.pylintrcsrc"

    [tool.poe.tasks.lint-tests]
    help = "Run lint in /tests directory"
    cmd  = "pylint tests --rcfile ./.github/workflows/.pylintrctests"

    [tool.poe.tasks.lint]
    help = "Run lint in /src and /tests directory"
    sequence  = ["lint-src", "lint-tests"]

    [tool.poe.tasks.test]
    help = "Run DB and test with pytest"
    sequence  = ["db run test", "db recreate", "test-pytest", "db stop test"]

    [tool.poe.tasks.test-pytest]
    help = "Run test with pytest"
    cmd = "pytest"

    [tool.poe.tasks.ci]
    help = "Run formatting, linting and testing in preparation for CI"
    sequence = ["format", "lint", "test"]

    [tool.poe.tasks.db]
    help = "Call DB utilities"
    cmd = "python3 db/local/db.py"